--- a/src/Styles/FormPage.scss
+++ b/src/Styles/FormPage.scss
@@ -59,7 +59,7 @@
           color: colors.$white;
           font-weight: bold;
           border: none;
-          width: 16rem;
+          width: 60%;
           border-radius: 1rem;
           margin-top: 1.5rem;
           cursor: pointer;
