--- a/src/Styles/Pdf.scss
+++ b/src/Styles/Pdf.scss
@@ -42,10 +42,11 @@
         border: 2px solid colors.$black;
         background-color: colors.$white;
         border-radius: 0.7rem;
-        padding: 0.2rem 2rem 2rem;
+        padding: 4rem 2rem;
         img {
-          width: 15rem;
-          height: 15rem;
+          margin: 2rem;
+          width: 8rem;
+          height: auto;
         }
         p {
           font-size: 1.3rem;
