--- a/src/Styles/Outlet.scss
+++ b/src/Styles/Outlet.scss
@@ -2,7 +2,7 @@
 @use "../Styles/mixin" as mix;
 
 .outlet-section {
-  // padding: 0 1rem;
+  padding: 0 1rem;
 }
 .outlet-box {
   padding: 0 1rem;
@@ -27,7 +27,7 @@
           font-size: 1rem;
           text-align: center;
           background-color: colors.$white;
-          width: 388px;
+          width: 100%;
           height: auto;
           font-weight: 600;
           border: none;
@@ -41,7 +41,7 @@
       
         .icon-down {
           position: absolute;
-          top: 1rem;
+          top: 1.1rem;
           right: 2rem;
         }
         input {
@@ -49,7 +49,6 @@
           padding: 1rem 1rem;
           font-size: 1rem;
           text-align: center;
-          width: 388px;
           width: 100%;
           height: auto;
           font-weight: 600;
@@ -79,7 +78,7 @@
           margin-top: .2rem;
         }
         label {
-          font-size: 0.75rem;
+          font-size: 0.7rem;
           font-weight: 600;
           color: rgba(99, 99, 99, 1);
           cursor: pointer;
@@ -97,7 +96,6 @@
 
         input[type="checkbox"]:checked {
           background-color: #0083e8;
-          border: none;
           border: 2px solid #0083e8;
 
 
